@@ -182,4 +182,18 @@ Timespec gnc_iso8601_to_timespec_local(const char *);
 Timespec gnc_iso8601_to_timespec_gmt(const char *);
 char * gnc_timespec_to_iso8601_buff (Timespec ts, char * buff);
 
+/* The gnc_timezone function returns the number of seconds *west*
+ * of UTC represented by the tm argument, adjusted for daylight
+ * savings time.
+ *
+ * This function requires a tm argument returned by localtime or set
+ * by mktime. This is a strange function! It requires that localtime
+ * or mktime be called before use. Subsequent calls to localtime or
+ * mktime *may* invalidate the result! The actual contents of tm *may*
+ * be used for both timezone offset and daylight savings time, or only
+ * daylight savings time! Timezone stuff under unix is not
+ * standardized and is a big mess.
+ */
+long int gnc_timezone (struct tm *tm);
+
 #endif /* __XACC_DATE_H__ */
